--- a/featuretrak/templates/base.html
+++ b/featuretrak/templates/base.html
@@ -7,6 +7,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="sha384-2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/custom.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.0/themes/overcast/jquery-ui.css">
   </head>
   <body>
     <nav class="navbar navbar-dark navbar-fixed-top bg-inverse">
@@ -28,103 +29,40 @@
       </div>
     </nav>
 
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 main">
-          <h1>Lorem Isum</h1>
-          <h2>Section title</h2>
-          <div class="table-responsive">
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Header</th>
-                  <th>Header</th>
-                  <th>Header</th>
-                  <th>Header</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>1,001</td>
-                  <td>Lorem</td>
-                  <td>ipsum</td>
-                  <td>dolor</td>
-                  <td>sit</td>
-                </tr>
-                <tr>
-                  <td>1,002</td>
-                  <td>amet</td>
-                  <td>consectetur</td>
-                  <td>adipiscing</td>
-                  <td>elit</td>
-                </tr>
-                <tr>
-                  <td>1,003</td>
-                  <td>Integer</td>
-                  <td>nec</td>
-                  <td>odio</td>
-                  <td>Praesent</td>
-                </tr>
-                <tr>
-                  <td>1,003</td>
-                  <td>libero</td>
-                  <td>Sed</td>
-                  <td>cursus</td>
-                  <td>ante</td>
-                </tr>
-                <tr>
-                  <td>1,004</td>
-                  <td>dapibus</td>
-                  <td>diam</td>
-                  <td>Sed</td>
-                  <td>nisi</td>
-                </tr>
-                <tr>
-                  <td>1,005</td>
-                  <td>Nulla</td>
-                  <td>quis</td>
-                  <td>sem</td>
-                  <td>at</td>
-                </tr>
-                <tr>
-                  <td>1,006</td>
-                  <td>nibh</td>
-                  <td>elementum</td>
-                  <td>imperdiet</td>
-                  <td>Duis</td>
-                </tr>
-                <tr>
-                  <td>1,007</td>
-                  <td>sagittis</td>
-                  <td>ipsum</td>
-                  <td>Praesent</td>
-                  <td>mauris</td>
-                </tr>
-                <tr>
-                  <td>1,014</td>
-                  <td>per</td>
-                  <td>inceptos</td>
-                  <td>himenaeos</td>
-                  <td>Curabitur</td>
-                </tr>
-                <tr>
-                  <td>1,015</td>
-                  <td>sodales</td>
-                  <td>ligula</td>
-                  <td>in</td>
-                  <td>libero</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
+    <div class="container">
+      <div style="display:hidden" class="row" data-bind="visible:breadcrumb().length > 0">
+        <ol class="breadcrumb" data-bind="foreach: breadcrumb">
+            <!-- ko ifnot: ($root.breadcrumb().length - 1) == $index() -->
+              <li class="breadcrumb-item"><a href="#" data-bind="text: $data[0]">notlast</a></li>
+            <!-- /ko -->
+            <!-- ko if: ($root.breadcrumb().length - 1) == $index() -->
+              <li class="breadcrumb-item active" data-bind="text: $data[0]">last</li>
+            <!-- /ko -->
+        </ol>
       </div>
+        {# could load only templates that will be actually needed.. #}
+        {% include 'home.html' %}
+        {% include 'login.html' %}
+        {% include 'admin.html' %}
+        {% include 'features-client.html' %}
+        {% include 'features-staff.html' %}
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="sha384-VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
+    <!--
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-debug.js"></script>
+    -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js" integrity="sha384-tvhEVHsrzai+guUF4cd0SVl6+tXsWu2ioLB3VR9mjkFuw3fevJVq6aJtxqTLhIv6" crossorigin="anonymous"></script>
+    <!-- shamelessly stolen from knockoutjs examples -->
+    <script type="text/html" id="ko_simpleGrid_grid">
+    {% include 'grid-table.html' %}
+    </script>
+    <script type="text/html" id="ko_simpleGrid_pageLinks">
+    {% include 'grid-pager.html' %}
+    </script>
+    <script src="{{ url_for('static', filename='knockout.simpleGrid.3.0.js') }}"></script>
+    <script src="{{ url_for('static', filename='logic.js') }}"></script>
   </body>
 </html>
-
