--- a/featuretrak/templates/login.html
+++ b/featuretrak/templates/login.html
@@ -4,9 +4,9 @@
     <h2>Sign in to FeatureTrak</h2>
     <span data-bind="text: login.message"></span><br>
     <label for="inputEmail" class="sr-only">Email</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus><br>
+    <input type="email" id="loginEmail" class="form-control" placeholder="Email address" required autofocus><br>
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required><br>
+    <input type="password" id="loginPassword" class="form-control" placeholder="Password" required><br>
     <button data-bind="click: login.click" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
   </form>
   </div>
