--- a/featuretrak/templates/admin.html
+++ b/featuretrak/templates/admin.html
@@ -3,21 +3,21 @@
   <h3>Client Management</h3>
   <div data-bind="simpleGrid: admin.clientGrid.vm">
   </div>
-  <button class="btn btn-secondary" data-bind="click: admin.showAdd "><img src="/static/icons/plus-16-ns.png">&nbsp;Add new</button>
+  <button class="btn btn-secondary" data-bind="click: admin.showAdd "><span class="octicon octicon-plus"></span>&nbsp;Add new</button>
 </div>
 
 <div class="row" style="display:none" data-bind="visible: curPage() == 'adminArea'">
   <h3>Area Management</h3>
   <div data-bind="simpleGrid: admin.areaGrid.vm">
   </div>
-  <button class="btn btn-secondary" data-bind="click: admin.showAdd "><img src="/static/icons/plus-16-ns.png">&nbsp;Add new</button>
+  <button class="btn btn-secondary" data-bind="click: admin.showAdd "><span class="octicon octicon-plus"></span>&nbsp;Add new</button>
 </div>
 
 <div class="row" style="display:none" data-bind="visible: curPage() == 'adminUser'">
   <h3>User Management</h3>
   <div data-bind="simpleGrid: admin.userGrid.vm">
   </div>
-  <button class="btn btn-secondary" data-bind="click: admin.showAdd "><img src="/static/icons/plus-16-ns.png">&nbsp;Add new</button>
+  <button class="btn btn-secondary" data-bind="click: admin.showAdd "><span class="octicon octicon-plus"></span>&nbsp;Add new</button>
 </div>
 
 <!-- client form -->
