--- a/featuretrak/templates/features-client.html
+++ b/featuretrak/templates/features-client.html
@@ -3,11 +3,13 @@
     <h3>Public Feature Requests</h3>
     <div data-bind="foreach: featuresClient.others">
       <div class="card">
-        <div class="card-header" data-bind="text: $data.title"></div>
+        <div class="card-header" data-bind="text: $data.title, attr: { 'data-feature-id' : $data.id }"></div>
         <div class="card-block">
           <div class="row">
-            <p>Lorem ipsum etc etc etc</p>
-            <p class="text-xs-right"><input data-bind="attr: { id: 'chkPrio' + $data.id }" type="checkbox"><label data-bind="attr: { for: 'chkPrio' + $data.id }">Include as priority</label></p>
+            <div class="ft-card-icon"><span class="octicon octicon-file-text" data-bind="attr: {title: $data.description }"></span></div>
+            <div class="ft-card-icon"><span class="octicon octicon-milestone" title="Area"></span><span data-bind="text: $data.area"></span></div>
+            <div class="ft-card-icon"><span class="octicon octicon-calendar" title="Target Date"></span><span data-bind="text: $data.target_date"></span></div>
+            <p class="text-xs-right"><input data-bind="click: $root.featuresClient.check, attr: { id: 'chkPrio' + $data.id }, checked: $data.included" type="checkbox"><label data-bind="attr: { for: 'chkPrio' + $data.id }">Include as priority</label></p>
           </div>
         </div>
       </div>
@@ -21,6 +23,7 @@
         <div class="card-block">
           <div class="row">
             <div class="ft-card-icon"><span class="octicon octicon-file-text" data-bind="attr: {title: $data.description }"></span></div>
+            <div class="ft-card-icon"><span class="octicon octicon-milestone" title="Area"></span><span data-bind="text: $data.area"></span></div>
             <div class="ft-card-icon"><span class="octicon octicon-calendar" title="Target Date"></span><span data-bind="text: $data.target_date"></span></div>
             <!-- ko if: $data.is_public -->
             <div class="ft-card-icon"><span class="octicon octicon-globe" title="Public feature request"></span></div>
@@ -28,10 +31,12 @@
             <!-- ko ifnot: $data.is_public -->
             <div class="ft-card-icon"><span class="octicon octicon-gist-secret" title="Private feature request"></span></div>
             <!-- /ko -->
+            <!-- ko ifnot: $data.belongs_to_another -->
             <div class="pull-xs-right">
             <button class="btn btn-primary btn-sm m-r-1" data-bind=""><span class="octicon octicon-pencil"></span>Edit</button>
             <button class="btn btn-danger btn-sm" data-bind=""><span class="octicon octicon-trashcan"></span>Delete</button>
             </div>
+            <!-- /ko -->
           </div>
         </div>
       </div>
