--- a/featuretrak/templates/base.html
+++ b/featuretrak/templates/base.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="sha384-2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/custom.css">
-    <link rel="stylesheet" href="/static/octicons/octicons.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='custom.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='octicons/octicons.css') }}">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.0/themes/overcast/jquery-ui.css">
   </head>
   <body>
