Use the appropiate BS classes for the parent commit

--- a/featuretrak/templates/features-client.html
+++ b/featuretrak/templates/features-client.html
@@ -4,12 +4,12 @@
     <div data-bind="foreach: featuresClient.others">
       <div class="card">
         <div class="card-header" data-bind="text: $data.title, attr: { 'data-feature-id' : $data.id }"></div>
-        <div class="card-block">
+        <div class="card-block p-b-0">
           <div class="row">
             <div class="ft-card-icon"><span class="octicon octicon-file-text" data-bind="attr: {title: $data.description }"></span></div>
             <div class="ft-card-icon"><span class="octicon octicon-milestone" title="Area"></span><span data-bind="text: $data.area"></span></div>
             <div class="ft-card-icon"><span class="octicon octicon-calendar" title="Target Date"></span><span data-bind="text: $data.target_date"></span></div>
-            <p class="text-xs-right"><input data-bind="click: $root.featuresClient.check, attr: { id: 'chkPrio' + $data.id }, checked: $data.included" type="checkbox"><label data-bind="attr: { for: 'chkPrio' + $data.id }">Include as priority</label></p>
+            <p class="text-xs-right m-b-0"><input data-bind="click: $root.featuresClient.check, attr: { id: 'chkPrio' + $data.id }, checked: $data.included" type="checkbox"><label data-bind="attr: { for: 'chkPrio' + $data.id }">Include as priority</label></p>
           </div>
         </div>
       </div>
@@ -20,7 +20,7 @@
     <div data-bind="foreach: featuresClient.own">
       <div class="card">
         <div class="card-header" data-bind="text: $data.title, attr: { 'data-feature-id' : $data.id }"></div>
-        <div class="card-block">
+        <div class="card-block p-b-0">
           <div class="row">
             <div class="ft-card-icon"><span class="octicon octicon-file-text" data-bind="attr: {title: $data.description }"></span></div>
             <div class="ft-card-icon"><span class="octicon octicon-milestone" title="Area"></span><span data-bind="text: $data.area"></span></div>
