--- a/featuretrak/templates/base.html
+++ b/featuretrak/templates/base.html
@@ -45,6 +45,7 @@
         {% include 'admin.html' %}
         {% include 'features-client.html' %}
         {% include 'features-staff.html' %}
+      <div id="ft-growl-notifications"></div>
     </div>
     <script src="{{ url_for('static', filename='jquery/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='jquery-ui/jquery-ui.min.js') }}"></script>
