Handle edit or deletions of public features
Also: pick priority 0 when inserting a new feature and no other
features have been found

--- a/featuretrak/templates/features-client.html
+++ b/featuretrak/templates/features-client.html
@@ -31,7 +31,7 @@
             <!-- ko ifnot: $data.belongs_to_another -->
             <div class="pull-xs-right">
             <button class="btn btn-primary btn-sm m-r-1" data-bind="click: $root.featuresClient.edit"><span class="octicon octicon-pencil"></span>Edit</button>
-            <button class="btn btn-danger btn-sm" data-bind="click: $root.featuresClient.delete"><span class="octicon octicon-trashcan"></span>Delete</button>
+            <button class="btn btn-danger btn-sm" data-bind="click: $root.featuresClient.del"><span class="octicon octicon-trashcan"></span>Delete</button>
             </div>
             <!-- /ko -->
           </div>
