--- a/featuretrak/templates/features-client.html
+++ b/featuretrak/templates/features-client.html
@@ -53,7 +53,7 @@
       <div class="modal-body">
         <div data-bind="visible: admin.validationErrors().length > 0" class="alert alert-danger" role="alert">
           <strong>Sorry!</strong>&nbsp;There were some errors in your submission. Please check:
-          <ul class="ft-error-list" data-bind="foreach: admin.validationErrors">
+          <ul class="ft-error-list m-b-0" data-bind="foreach: admin.validationErrors">
             <li data-bind="text: $data"></li>
           </ul>
         </div>
