Handle gracefully the lack of a target date

--- a/featuretrak/templates/features-client.html
+++ b/featuretrak/templates/features-client.html
@@ -24,7 +24,9 @@
           <div class="row">
             <div class="ft-card-icon"><span class="octicon octicon-file-text" data-bind="attr: {title: $data.description }"></span></div>
             <div class="ft-card-icon"><span class="octicon octicon-milestone" title="Area"></span><span data-bind="text: $data.area"></span></div>
+            <!-- ko if: $data.target_date != '' -->
             <div class="ft-card-icon"><span class="octicon octicon-calendar" title="Target Date"></span><span data-bind="text: $data.target_date"></span></div>
+            <!-- /ko -->
             <!-- ko if: $data.is_public -->
             <div class="ft-card-icon"><span class="octicon octicon-globe" title="Public feature request"></span></div>
             <!-- /ko -->
