Remove `required` attribute from all inputs

--- a/featuretrak/templates/features-client.html
+++ b/featuretrak/templates/features-client.html
@@ -66,7 +66,7 @@
             <div class="form-group row">
               <label class="col-md-3 control-label" for="feature_title">Title</label>
               <div class="col-md-9">
-                <input data-bind="value: featuresClient.form.title" id="feature_title" name="feature_title" type="text" class="form-control input-md" required="">
+                <input data-bind="value: featuresClient.form.title" id="feature_title" name="feature_title" type="text" class="form-control input-md">
               </div>
             </div>
 
@@ -92,14 +92,14 @@
             <div class="form-group row">
               <label class="col-md-3 control-label" for="">Target date</label>
               <div class="col-md-3">
-                <input data-bind="value: featuresClient.form.target_date" id="feature_target_date" name="feature_target_date" type="text" class="form-control input-md" required="">
+                <input data-bind="value: featuresClient.form.target_date" id="feature_target_date" name="feature_target_date" type="text" class="form-control input-md">
               </div>
             </div>
 
             <div class="form-group row">
               <label class="col-md-3 control-label" for="area_name">URL</label>
               <div class="col-md-9">
-                <input data-bind="value: featuresClient.form.url" name="feature_url" type="text" class="form-control input-md" required="">
+                <input data-bind="value: featuresClient.form.url" name="feature_url" type="text" class="form-control input-md">
               </div>
             </div>
 
