--- a/featuretrak/templates/admin.html
+++ b/featuretrak/templates/admin.html
@@ -40,7 +40,7 @@
             <div class="form-group row">
               <label class="col-md-4 control-label" for="client_name">Name</label>  
               <div class="col-md-5">
-                <input data-bind="value: admin.client.name" id="client_name" name="client_name" type="text" class="form-control input-md" required="">
+                <input data-bind="value: admin.client.name" id="client_name" name="client_name" type="text" class="form-control input-md">
               </div>
             </div>
 
@@ -83,7 +83,7 @@
             <div class="form-group row">
               <label class="col-md-4 control-label" for="area_name">Name</label>  
               <div class="col-md-5">
-                <input data-bind="value: admin.area.name" id="area_name" name="area_name" type="text" class="form-control input-md" required="">
+                <input data-bind="value: admin.area.name" id="area_name" name="area_name" type="text" class="form-control input-md">
               </div>
             </div>
 
@@ -120,28 +120,28 @@
             <div class="form-group row">
               <label class="col-md-4 control-label" for="user_username">Username</label>  
               <div class="col-md-4">
-                <input data-bind="value: admin.user.username" id="user_username" name="user_username" type="text" class="form-control" required="">
+                <input data-bind="value: admin.user.username" id="user_username" name="user_username" type="text" class="form-control">
               </div>
             </div>
 
             <div class="form-group row">
               <label class="col-md-4 control-label" for="user_passwd">Password</label>  
               <div class="col-md-4">
-                <input data-bind="value: admin.user.passwd" id="user_passwd" name="user_passwd" type="password" class="form-control" required="">
+                <input data-bind="value: admin.user.passwd" id="user_passwd" name="user_passwd" type="password" class="form-control">
               </div>
             </div>
 
             <div class="form-group row">
               <label class="col-md-4 control-label" for="user_full_name">Full Name</label>  
               <div class="col-md-7">
-                <input data-bind="value: admin.user.full_name" id="user_full_name" name="user_full_name" type="text" class="form-control" required="">
+                <input data-bind="value: admin.user.full_name" id="user_full_name" name="user_full_name" type="text" class="form-control">
               </div>
             </div>
 
             <div class="form-group row">
               <label class="col-md-4 control-label" for="user_email">E-mail address</label>  
               <div class="col-md-7">
-                <input data-bind="value: admin.user.email" id="user_email" name="user_email" type="email" class="form-control" required="">
+                <input data-bind="value: admin.user.email" id="user_email" name="user_email" type="email" class="form-control">
               </div>
             </div>
 
