Remove robohash images

--- a/featuretrak/templates/home.html
+++ b/featuretrak/templates/home.html
@@ -2,7 +2,7 @@
 <div class="row" style="display:none" data-bind="visible: curPage() == 'home'">
   <div class="col-xs-4">
     <div class="card">
-      <img class="card-img-top w-100" src="https://robohash.org/{{random_string(20)}}">
+      <img class="card-img-top w-100" src="https://unsplash.it/300/200/?random">
       <div class="card-block">
         <h4 class="card-title">Manage Clients</h4>
         <p class="card-text">Several clients that currently use BriteCore products</p>
@@ -12,7 +12,7 @@
   </div>
   <div class="col-xs-4">
     <div class="card">
-      <img class="card-img-top w-100" src="https://robohash.org/{{random_string(20)}}">
+      <img class="card-img-top w-100" src="https://unsplash.it/300/200/?random">
       <div class="card-block">
         <h4 class="card-title">Manage Areas</h4>
         <p class="card-text">The different Product Areas of BriteCore</p>
@@ -22,7 +22,7 @@
   </div>
   <div class="col-xs-4">
     <div class="card">
-      <img class="card-img-top w-100" src="https://robohash.org/{{random_string(20)}}">
+      <img class="card-img-top w-100" src="https://unsplash.it/300/200/?random">
       <div class="card-block">
         <h4 class="card-title">Manage Users</h4>
         <p class="card-text">Control who can access this software</p>
@@ -34,7 +34,7 @@
 <div class="row" style="display:none" data-bind="visible: curPage() == 'home'">
   <div class="col-xs-4">
     <div class="card">
-      <img class="card-img-top w-100" src="https://robohash.org/{{random_string(20)}}">
+      <img class="card-img-top w-100" src="https://unsplash.it/300/200/?random">
       <div class="card-block">
         <h4 class="card-title">Features List</h4>
         <p class="card-text">A consolidated view of user requested features, sorted from the most important to the least one</p>
@@ -48,7 +48,7 @@
 <div class="row" style="display:none" data-bind="visible: curPage() == 'home'">
   <div class="col-xs-4">
     <div class="card">
-      <img class="card-img-top w-100" src="https://robohash.org/{{random_string(20)}}">
+      <img class="card-img-top w-100" src="https://unsplash.it/300/200/?random">
       <div class="card-block">
         <h4 class="card-title">Propose Features</h4>
         <p class="card-text">Propose and prioritize the features that will be developed for BriteCore</p>
