--- a/featuretrak/templates/admin.html
+++ b/featuretrak/templates/admin.html
@@ -150,16 +150,16 @@
               <div class="col-md-5">
                 <div class="form-check">
                   <label class="form-check-label">
-                    <input data-bind="checked: admin.user.is_admin" class="form-check-input" type="checkbox" id="blankCheckbox" value="is_admin">
+                    <input data-bind="checked: admin.user.is_admin" class="form-check-input" type="checkbox" id="user_is_admin" value="is_admin">
                   </label>
                 </div>
               </div>
             </div>
 
             <div class="form-group row">
-              <label class="col-md-4 control-label" for="user_username">Client</label>  
+              <label class="col-md-4 control-label" for="user_client">Client</label>
               <div class="col-md-7">
-                  <select data-bind="value: admin.user.client_id, options: admin.clientList, optionsText: 'name', optionsValue: 'id', optionsCaption: 'Choose a Client', enable: !admin.user.is_admin()" class="form-control"></select>
+                  <select data-bind="value: admin.user.client_id, options: admin.clientList, optionsText: 'name', optionsValue: 'id', optionsCaption: 'Choose a Client', enable: !admin.user.is_admin()" id="user_client" class="form-control"></select>
               </div>
             </div>
 
