Remove unneeded name attribute in feature form

--- a/featuretrak/templates/features-client.html
+++ b/featuretrak/templates/features-client.html
@@ -66,7 +66,7 @@
             <div class="form-group row">
               <label class="col-md-3 control-label" for="feature_title">Title</label>
               <div class="col-md-9">
-                <input data-bind="value: featuresClient.form.title" id="feature_title" name="feature_title" type="text" class="form-control input-md">
+                <input data-bind="value: featuresClient.form.title" id="feature_title" type="text" class="form-control input-md">
               </div>
             </div>
 
@@ -81,10 +81,10 @@
               <label class="col-md-3 control-label" for="">Visibility</label>
               <div class="col-md-5">
                 <label class="form-check-inline">
-                  <input class="form-check-input" type="radio" data-bind="checked: featuresClient.form.is_public, checkedValue: false" name="inlineRadioOptions">Private
+                  <input class="form-check-input" type="radio" data-bind="checked: featuresClient.form.is_public, checkedValue: false">Private
                 </label>
                 <label class="form-check-inline">
-                  <input class="form-check-input" type="radio" data-bind="checked: featuresClient.form.is_public, checkedValue: true" name="inlineRadioOptions">Public
+                  <input class="form-check-input" type="radio" data-bind="checked: featuresClient.form.is_public, checkedValue: true">Public
                 </label>
               </div>
             </div>
@@ -92,14 +92,14 @@
             <div class="form-group row">
               <label class="col-md-3 control-label" for="">Target date</label>
               <div class="col-md-3">
-                <input data-bind="value: featuresClient.form.target_date" id="feature_target_date" name="feature_target_date" type="text" class="form-control input-md">
+                <input data-bind="value: featuresClient.form.target_date" id="feature_target_date" type="text" class="form-control input-md">
               </div>
             </div>
 
             <div class="form-group row">
               <label class="col-md-3 control-label" for="area_name">URL</label>
               <div class="col-md-9">
-                <input data-bind="value: featuresClient.form.url" name="feature_url" type="text" class="form-control input-md">
+                <input data-bind="value: featuresClient.form.url" type="text" class="form-control input-md">
               </div>
             </div>
 
