--- a/featuretrak/templates/features-client.html
+++ b/featuretrak/templates/features-client.html
@@ -73,12 +73,12 @@
             <div class="form-group row">
               <label class="col-md-3 control-label" for="feature_description">Description</label>
               <div class="col-md-9">
-                <textarea class="form-control" rows="5" data-bind="value: featuresClient.form.description"></textarea>
+                <textarea class="form-control" rows="5" id="feature_description" data-bind="value: featuresClient.form.description"></textarea>
               </div>
             </div>
 
             <div class="form-group row">
-              <label class="col-md-3 control-label" for="">Visibility</label>
+              <label class="col-md-3 control-label">Visibility</label>
               <div class="col-md-5">
                 <label class="form-check-inline">
                   <input class="form-check-input" type="radio" data-bind="checked: featuresClient.form.is_public, checkedValue: false">Private
@@ -90,26 +90,25 @@
             </div>
 
             <div class="form-group row">
-              <label class="col-md-3 control-label" for="">Target date</label>
+              <label class="col-md-3 control-label" for="feature_target_date">Target date</label>
               <div class="col-md-3">
                 <input data-bind="value: featuresClient.form.target_date" id="feature_target_date" type="text" class="form-control input-md">
               </div>
             </div>
 
             <div class="form-group row">
-              <label class="col-md-3 control-label" for="area_name">URL</label>
+              <label class="col-md-3 control-label" for="feature_url">URL</label>
               <div class="col-md-9">
-                <input data-bind="value: featuresClient.form.url" type="text" class="form-control input-md">
+                <input data-bind="value: featuresClient.form.url" type="text" id="feature_url" class="form-control input-md">
               </div>
             </div>
 
             <div class="form-group row">
-              <label class="col-md-3 control-label" for="area_name">Area</label>
+              <label class="col-md-3 control-label" for="feature_area">Area</label>
               <div class="col-md-5">
-                <select data-bind="value: featuresClient.form.area_id, options: featuresClient.areaList, optionsText: 'name', optionsValue: 'id', optionsCaption: 'Choose an Area'" class="form-control"></select>
+                <select data-bind="value: featuresClient.form.area_id, options: featuresClient.areaList, optionsText: 'name', optionsValue: 'id', optionsCaption: 'Choose an Area'" id="feature_area" class="form-control"></select>
               </div>
             </div>
-
           </fieldset>
         </form>
       </div>
