--- a/featuretrak/templates/home.html
+++ b/featuretrak/templates/home.html
@@ -1,4 +1,4 @@
-<!-- ko if: loggedIsAdmin -->
+<!-- ko if: login.state().is_admin -->
 <div class="row" style="display:none" data-bind="visible: curPage() == 'home'">
   <div class="col-xs-4">
     <div class="card">
@@ -44,7 +44,7 @@
   </div>
 </div>
 <!-- /ko -->
-<!-- ko ifnot: loggedIsAdmin -->
+<!-- ko ifnot: login.state().is_admin -->
 <div class="row" style="display:none" data-bind="visible: curPage() == 'home'">
   <div class="col-xs-4">
     <div class="card">
