--- a/featuretrak/templates/login.html
+++ b/featuretrak/templates/login.html
@@ -1,13 +1,23 @@
-<div class="row">
-  <div class="m-x-auto" style="width:400px">
-  <form style="display:none; " data-bind="visible: curPage() == 'login'">
-    <h2>Sign in to FeatureTrak</h2>
-    <span data-bind="text: login.message"></span><br>
-    <label for="inputEmail" class="sr-only">Email</label>
-    <input type="email" id="loginEmail" class="form-control" placeholder="Email address" autofocus><br>
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="loginPassword" class="form-control" placeholder="Password"><br>
-    <button data-bind="click: login.click" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  </form>
+<div class="row" style="display:none; " data-bind="visible: curPage() == 'login'">
+  <div class="col-md-5">
+    <form>
+      <h4>Sign in to FeatureTrak</h4>
+      <div class="form-group">
+        <label for="inputEmail" class="sr-only">Email</label>
+        <input type="email" id="loginEmail" class="form-control" placeholder="Email address" autofocus>
+      </div>
+      <div class="form-group">
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="loginPassword" class="form-control" placeholder="Password">
+      </div>
+      <button data-bind="click: login.click" class="btn btn-lg btn-primary" type="submit">Sign in</button>
+    </form>
+  </div>
+  <div class="col-md-1"></div>
+  <div class="col-md-5">
+    <h5>Alternatively, you can also sign in with your Google Account</h5>
+    <div>
+      <div class="g-signin2" data-width="250" data-theme="dark" data-longtitle="true" data-height="50" data-onsuccess="onGoogleSignIn"></div>
+    </div>
   </div>
 </div>
