--- a/featuretrak/templates/base.html
+++ b/featuretrak/templates/base.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="google-signin-client_id" content="{{ GOOGLE_CLIENT_ID }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='custom.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='octicons/octicons.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='jquery-ui/jquery-ui.css') }}">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.0/themes/overcast/jquery-ui.css">
   </head>
   <body>
     <nav class="navbar navbar-dark navbar-fixed-top bg-inverse">
@@ -47,11 +47,11 @@
         {% include 'choose-client.html' %}
       <div id="ft-growl-notifications"></div>
     </div>
-    <script src="{{ url_for('static', filename='jquery/jquery.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='jquery-ui/jquery-ui.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='tether/tether.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='bootstrap/bootstrap.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='knockout/knockout-min.js') }}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
     <!-- shamelessly stolen from knockoutjs examples -->
     <script type="text/html" id="ko_simpleGrid_grid">
     {% include 'grid-table.html' %}
