--- a/featuretrak/templates/login.html
+++ b/featuretrak/templates/login.html
@@ -3,8 +3,8 @@
     <form>
       <h4>Sign in to FeatureTrak</h4>
       <div class="form-group">
-        <label for="inputEmail" class="sr-only">Email</label>
-        <input type="email" id="loginEmail" class="form-control" placeholder="Email address" autofocus>
+        <label for="inputEmail" class="sr-only">Username or email</label>
+        <input type="email" id="loginEmail" class="form-control" placeholder="Username or email address" autofocus>
       </div>
       <div class="form-group">
         <label for="inputPassword" class="sr-only">Password</label>
